@@ -1,4 +1,4 @@
-name: test
+name: Win64
 
 on:
   push:
@@ -13,17 +13,18 @@ jobs:
     strategy:
       matrix:
         os:
-          - ubuntu-latest
-          - macos-latest
           - windows-latest
         raku-version:
-          - "latest"
-          - "2023.08"
+          - 'latest'
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
       - uses: Raku/setup-raku@v1
         with:
           raku-version: ${{ matrix.raku-version }}
-      - name: Run tests and Install
-        run: zef install . --debug
+      - name: Install Dependencies
+        run: |
+            choco install rakudostar
+            zef --exclude="z" install --debug --/test --test-depends --deps-only .
+      - name: Run Tests
+        run: zef --debug install .
