@@ -17,7 +17,7 @@
   },
   "resources": [
   ],
-  "source-url": "git://github.com/raku-community-modules/Pod-TreeWalker.git",
+  "source-url": "https://github.com/raku-community-modules/Pod-TreeWalker.git",
   "tags": [
   ],
   "test-depends": [
